Sun Mar  1 05:18:11 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkentry.c gtk/gtktext.c gtkeditable.[ch]

	Changed interface to cut/copy/paste so it makes sense
	when triggered by say, menu items.

Sun Mar  1 03:20:39 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkentry.[ch] gtk/gtktext.[ch] gtkeditable.[ch]

	Turned off debugging in gtktext.c

	Bug fixes for cutting, pasting, deleting, etc. 

	Some of the bugs that were there before have definitely
	been fixed. 
	
	* gtk/testgtk.c gtk/testgtkrc: Removed my ugly orange backgrounds,
	to make things look nicer. 
	
Sat Feb 28 23:58:54 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkentry.[ch] gtktext.[ch] gtkeditable.[ch]

	Created a new base widget type Editable for the entry and
	text widgets, which encapsulates most of the selection and
	clipboard handling stuff, plus some common signals.

	Changed the Entry widget extensively to support this, 
	but the interface and appearance should be the same.

	Changed the Text widget moderately to support this.

	It now supports:

	- Selection style cut and paste
	- Clipboard style cut and paste
	- Emacs style key bindings (~same as Entry)
	- Word motion
	- "changed" signal

	There are definitely still some bugs in the new stuff.

	Use style->base for the background and style->text for
	the foreground.
	
	* gtkfilesel.c gtkspinbutton.c testgtk.c: small changes
	to fit the new interface more exactly.
	
Sat Feb 28 19:29:09 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkclist.c (gtk_clist_new_with_titles): retrive the clist widget
	from gtk_type_new (gtk_clist_get_type ()), not gtk_clist_new(),
 	otherwise gtk_clist_construct() gets called twice.

	* gtk/gtkhandlebox.h:
	* gtk/gtkhandlebox.c: emit signals when the child is attached/detached.

Sat Feb 28 15:18:36 1998  Tim Janik  <timj@gimp.org>

	* gtk/gtkpreview.c: fix behavior of gtk_preview_put() with
	srcx/srcy != 0, gtk-shige-980127-0.patch.gz by
	AOSASA Shigeru <aozasa@sakuranet.or.jp>.
